Fix events positioning bug on IE

--- a/src/scss/components/_medium-verticality.scss
+++ b/src/scss/components/_medium-verticality.scss
@@ -131,7 +131,7 @@
       }
 
       &.half + div.event:not(.detail-shown).half {
-        left: unset !important;
+        left: auto !important;
         right: 0;
         padding-left: 5px;
       }
@@ -152,7 +152,7 @@
       }
 
       &.third + div.event.third + div.event:not(.detail-shown).third {
-        left: unset !important;
+        left: auto !important;
         right: 0;
         padding-left: 5px;
       }
